Fixed start and end fields spacing (event form) to only effect the first field.

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -312,7 +312,7 @@ hr {
   display: none;
 }
 
-.form-group > .col-sm-6:first {
+.form-group > .col-sm-6:first-child {
   @media (max-width: $screen-sm-max) {
     margin-bottom: 15px;
   }
